src/objects/Invoice__c.object
<CustomObject>
    <description>Invoices to track orders going in and out of the warehouse</description>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Archives the Invoice once the deal is closed. An archived message cannot be edited.</description>
        <inlineHelpText>Click to archive the invoice.</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Define the status of the given invoice.</description>
        <inlineHelpText>Choose a value from the drop-down list.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>The total price of all the items in the invoice.</description>
        <label>Total Price</label>
        <summarizedField>Line_Item__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <description>Displays the total number of items billed in the invoice</description>
        <label>Total Quantity</label>
        <summarizedField>Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>test_javascript_hyperlink__c</fullName>
        <formula>HYPERLINK(&apos;javascript&apos;, &apos;Click Here to say Hello!!&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test javascript hyperlink</label>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Invoices</label>
    </listViews>
    <nameField>
        <displayFormat>INV#{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Archive_Invoices_only_with_status_closed</fullName>
        <active>true</active>
        <description>An invoice can only be archived once its status is set to closed.</description>
        <errorConditionFormula>AND(Archived__c, ISPICKVAL(Status__c, &quot;Open&quot;))</errorConditionFormula>
        <errorDisplayField>Archived__c</errorDisplayField>
        <errorMessage>Only a closed invoice can be archived</errorMessage>
    </validationRules>
</CustomObject>